# SonicBoom

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  audit.toml  docker-compose.yml  example.env  tokens.json
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
docs/: admin.md  api.md  config.md  fetch.json  fetch.ts  openai.md
src/: config.rs  error.rs  logging.rs  main.rs
src/admin/: handlers.rs  lockout.rs  mod.rs  session.rs  templates.rs
src/api/: mod.rs  openai.rs  queue.rs  tts.rs
src/auth/: mod.rs  store.rs  token.rs
src/tts/: audio.rs  download.rs  inference.rs  mod.rs  model.rs  queue.rs  text.rs
src/web/: index.rs  mod.rs
templates/: index.html
