[package]
name = "SonicBoom"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors"] }
headers = "0.4"

# Sessions (Admin panel)
tower-sessions = { version = "0.14", features = ["memory-store"] }

# ONNX inference
ort = { version = "2.0.0-rc.11", features = ["coreml", "ndarray"] }
ndarray = "0.17"

# Audio encoding
opus = "0.3"
ogg = "0.9"

# HuggingFace model download
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
rand = "0.9"
unicode-normalization = "0.1"

[profile.release]
lto = true
opt-level = "z"
