[package]
name = "SonicBoom"
version = "0.1.0"
edition = "2024"
description = "High-performance web server that generates Text-to-Speech audio using the Supertonic 3 ONNX model."
license = "MIT"
repository = "https://github.com/daramkun/SonicBoom"

[features]
# Headless server build (default). Enable `gui` for the desktop tray icon.
default = ["playback"]
# Server-side audio playback queue (requires ALSA on Linux).
playback = ["dep:rodio"]
# Desktop system tray (tao/tray-icon). Only relevant on macOS/Windows/Linux desktops.
gui = ["dep:tray-icon", "dep:tao", "dep:image", "dep:open"]
# Apple Silicon CoreML acceleration for ONNX inference (macOS only).
coreml = ["ort/coreml"]
# NVIDIA CUDA acceleration for ONNX inference (Linux/Windows).
cuda = ["ort/cuda"]
# AMD ROCm acceleration for ONNX inference (Linux).
rocm = ["ort/rocm"]
# NOTE: `coreml`, `cuda`, and `rocm` are mutually exclusive per platform.
# Enable at most one of them when building, e.g. `cargo build --release --features cuda`.

[dependencies]
# Async runtime (only the features actually used)
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "net",
    "time",
    "fs",
    "sync",
    "io-util",
] }

# Web server
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "timeout"] }

# Sessions (Admin panel)
tower-sessions = { version = "0.14", features = ["memory-store"] }

# ONNX inference (CoreML is macOS-only and opt-in via the `coreml` feature;
# CUDA/ROCm are opt-in via the `cuda`/`rocm` features).
# NOTE: `ort` is currently pinned to a release candidate (2.0.0-rc.11);
# pin to a stable release once one is published.
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"

# Audio encoding/decoding
opus = "0.3"
ogg = "0.9"
hound = "3.5"
shine-rs = "0.1"
flacenc = "0.5"

# Audio playback (server-side queue)
rodio = { version = "0.19", optional = true }

# HuggingFace model download
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security: constant-time comparison to prevent timing attacks
constant_time_eq = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
rand = "0.9"
unicode-normalization = "0.1"

# Tray icon (Desktop GUI only — gated behind the `gui` feature)
tray-icon = { version = "0.19", optional = true }
tao = { version = "0.30", optional = true }
image = { version = "0.25", optional = true }
open = { version = "5.3", optional = true }

[profile.release]
lto = true
opt-level = 3
strip = true
panic = "abort"
codegen-units = 1
